Fixed overflow from too many stops near current location, fixed show map function

--- a/src/styles/containers/map.scss
+++ b/src/styles/containers/map.scss
@@ -9,3 +9,20 @@
     
     opacity: 0;
 }
+
+.fa-eye {
+    top: 0;
+    right: 0;
+    position: absolute;
+    padding: 20px;
+    
+    margin: 20px;
+    font-size: 25px;
+
+    cursor: pointer;
+
+    opacity: 0;
+    transition: 0.5s;
+        
+    float: right;
+}
